Update GELCleaner.java